# operating_system

./: .gitignore  CMakeLists.txt  README.md  build.sh
daemon/: CMakeLists.txt  build.sh  config.cpp  config.hpp  config.txt  daemon.cpp  daemon.hpp  main.cpp
src/client/: client.hpp  client_gui.hpp  client_main.cpp  fifo_names.hpp  mq_names.hpp  shm_names.hpp
src/connections/: all_connections.hpp  conn_fifo.cpp  conn_fifo.hpp  conn_mq.cpp  conn_mq.hpp  conn_shm.cpp  conn_shm.hpp  connection.hpp
src/host/: client_info.hpp  fifo_names.hpp  host.hpp  host_gui.hpp  host_main.cpp  mq_names.hpp  shm_names.hpp
src/includes/: includes.hpp
